# multi-engine-tts-server

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  colab_quickstart.ipynb  pyproject.toml  requirements-colab.txt  requirements-non-mlx.txt  requirements.txt  server.py
docs/: TTS-Server.postman_collection.json  api.md  development.md  engine-piper.md  engine-qwen.md  index.md
docs/engines/: chatterbox.md  kokoro.md  piper.md  qwen.md  whisper.md
notebooks/: colab_quickstart.ipynb  kaggle_quickstart.ipynb  sagemaker_quickstart.ipynb
scripts/: download_models.sh
src/: audio.py  cache.py  presets.py  utils.py
src/engines/: __init__.py  base.py  chatterbox.py  kokoro.py  piper.py  qwen.py
src/stt/: __init__.py  base.py  faster_whisper.py  whisper_mlx.py
static/: app.js  index.html
static/css/: styles.css
static/js/: app.js  components.js  store.js
